--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,17 +28,17 @@ SET( BIN_INSTALL_DIR "bin"      CACHE PATH "Path the tool executables are instal
 INCLUDE_DIRECTORIES( BEFORE
     include/
     /usr/include/
-    ${CMAKE_HOME_DIRECTORY}/contrib/assimp/include
-    ${CMAKE_HOME_DIRECTORY}/contrib/stb
-    ${CMAKE_HOME_DIRECTORY}/contrib/glew/include
-    ${CMAKE_HOME_DIRECTORY}/contrib/cppcore/include
-    ${CMAKE_HOME_DIRECTORY}/contrib/assimp/contrib/zlib
-    ${CMAKE_HOME_DIRECTORY}/contrib/cppcore/contrib/gtest-1.7.0/include
-    ${CMAKE_HOME_DIRECTORY}/contrib/cppcore/contrib/gtest-1.7.0/
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/assimp/include
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/stb
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/glew/include
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/cppcore/include
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/assimp/contrib/zlib
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/cppcore/contrib/gtest-1.7.0/include
+    ${CMAKE_CURRENT_BINARY_DIR}/contrib/cppcore/contrib/gtest-1.7.0/
     ${SDL2_INCLUDE_DIRS}
     "c:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Include"
-    ${CMAKE_HOME_DIRECTORY}/src/Engine
-    ${CMAKE_HOME_DIRECTORY}/
+    ${CMAKE_CURRENT_BINARY_DIR}/src/Engine
+    ${CMAKE_CURRENT_BINARY_DIR}/
 )
 
 link_directories(
