Add a basic test for the canvas renderer

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -71,6 +71,10 @@ SET ( unittest_rb_src
     src/RenderBackend/ShaderTest.cpp
 )
 
+SET (unittest_rb_2d_src
+    src/RenderBackend/2D/CanvasRendererTest.cpp
+)
+
 SET( unittest_rb_oglrenderer_src 
     src/RenderBackend/OGLRenderer/GLEnumTest.cpp
 )
@@ -108,6 +112,7 @@ SOURCE_GROUP( src\\IO                         FILES ${unittest_io_src} )
 SOURCE_GROUP( src\\Platform                   FILES ${unittest_platform_src})
 SOURCE_GROUP( src\\Profiling                  FILES ${unittest_profiling_src})
 SOURCE_GROUP( src\\RenderBackend              FILES ${unittest_rb_src} )
+SOURCE_GROUP( src\\RenderBackend\\2D          FILES ${unittest_rb_2d_src} )
 SOURCE_GROUP( src\\RenderBackend\\OGLRenderer FILES ${unittest_rb_oglrenderer_src} )
 SOURCE_GROUP( src\\Scene                      FILES ${unittest_scene_src} )
 SOURCE_GROUP( src\\GTest                      FILES ${gtest_src} )
@@ -124,6 +129,7 @@ ADD_EXECUTABLE( osre_unittest
     ${unittest_profiling_src}
     ${unittest_rb_src}
     ${unittest_rb_oglrenderer_src}
+    ${unittest_rb_2d_src}
     ${unittest_ui_src}
     ${unittest_scene_src}
     ${gtest_src}
