Add animation component.

--- a/src/Engine/CMakeLists.txt
+++ b/src/Engine/CMakeLists.txt
@@ -32,6 +32,15 @@ ELSE( WIN32 )
 ENDIF( WIN32 )
 
 #==============================================================================
+# Animation
+#==============================================================================
+SET(animation_src
+    Animation/AnimatorBase.h
+    Animation/EnityAnimator.h
+    Animation/EnityAnimator.cpp
+)
+
+#==============================================================================
 # App
 #==============================================================================
 SET( app_src
