--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ find_package(GLEW        REQUIRED)
 
 # Cache these to allow the user to override them manually.
 SET( LIB_INSTALL_DIR "lib"      CACHE PATH "Path the built library files are installed to." )
+SET( INCLUDE_INSTALL_DIR "osre" CACHE PATH "Path the header files are installed to." )
 SET( BIN_INSTALL_DIR "bin"      CACHE PATH "Path the tool executables are installed to." )
 
 # Set the default build output folders
