Refactorings rename world to scene

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -79,7 +79,7 @@ SET ( unittest_scene_src
     src/Scene/DbgRendererTest.cpp
     src/Scene/GeometryBuilderTest.cpp
     src/Scene/NodeTest.cpp
-    src/Scene/WorldTest.cpp
+    src/Scene/SceneTest.cpp
     src/Scene/TAABBTest.cpp
 )
 
