Feature: Add export script and prepare python script calling on startup

--- a/src/Editor/CMakeLists.txt
+++ b/src/Editor/CMakeLists.txt
@@ -48,6 +48,8 @@ set(renderview_src
 
 set(actions_src
     src/Actions/ActionBase.h
+    src/Actions/ExportAction.cpp
+    src/Actions/ExportAction.h
     src/Actions/ImportAction.cpp
     src/Actions/ImportAction.h
 )
