--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,12 +93,12 @@ if (OSRE_BUILD_PLAYER)
     ADD_SUBDIRECTORY( src/Player )
 endif()
 
-if (WIN32)
+#if (WIN32)
     if (OSRE_BUILD_ED)
         ADD_SUBDIRECTORY( src/Editor)
         set_target_properties(osre_ed PROPERTIES FOLDER Editor)
     endif()
-endif()
+#endif()
 
 if (OSRE_BUILD_TESTS)
     ADD_SUBDIRECTORY( test/RenderTests )
