Add aligned samples

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -4,11 +4,6 @@ INCLUDE_DIRECTORIES(
     ../
 )
 
-SET (SamplesBase
-    SamplesBase/SamplesAppBase.h
-    SamplesBase/SamplesAppBase.cpp
-)
-
 SET (00_helloworld_src
     00_HelloWorld/HelloWorld.cpp
     00_HelloWorld/README.md
@@ -37,10 +32,6 @@ SET (04_terrain_src
 SET (05_animation_src
     05_Animation/Animation.cpp
     05_Animation/README.md
-)
-
-ADD_LIBRARY(samplesbase
-    ${SamplesBase}
 )
 
 ADD_EXECUTABLE(helloworld
@@ -72,13 +63,12 @@ link_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../../ThirdParty/glew/Release
 )
 
-target_link_libraries(samplesbase  osre)
-target_link_libraries(helloworld   osre samplesbase)
-target_link_libraries(modelloading osre samplesbase)
-target_link_libraries(demo2d       osre samplesbase)
-target_link_libraries(instancing   osre samplesbase)
-target_link_libraries(terrain      osre samplesbase)
-target_link_libraries(animation    osre samplesbase)
+target_link_libraries(helloworld   osre)
+target_link_libraries(modelloading osre)
+target_link_libraries(demo2d       osre)
+target_link_libraries(instancing   osre)
+target_link_libraries(terrain      osre)
+target_link_libraries(animation    osre)
 
 set_target_properties(helloworld   PROPERTIES FOLDER Samples)
 set_target_properties(modelloading PROPERTIES FOLDER Samples)
