--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -78,12 +78,13 @@ target_link_libraries(demo2d       osre)
 target_link_libraries(instancing   osre)
 target_link_libraries(terrain      osre)
 target_link_libraries(animation    osre)
-target_link_libraries(widgets    osre)
+target_link_libraries(widgets      osre)
 
 set_target_properties(helloworld   PROPERTIES FOLDER Samples)
 set_target_properties(modelloading PROPERTIES FOLDER Samples)
 set_target_properties(demo2d       PROPERTIES FOLDER Samples)
 set_target_properties(instancing   PROPERTIES FOLDER Samples)
 set_target_properties(terrain      PROPERTIES FOLDER Samples)
+set_target_properties(widgets      PROPERTIES FOLDER Samples)
 set_target_properties(animation    PROPERTIES FOLDER Samples)
 
