--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,6 +22,12 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
+    -name: Prepare Vulkan SDK
+     uses: humbletim/setup-vulkan-sdk@v1.2.1
+     with:
+       vulkan-query-version: 1.4.304.1
+       vulkan-components: Vulkan-Headers, Vulkan-Loader
+       vulkan-use-cache: true
     - name: install_dependencies
       run: |
         sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
